--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EmberJsGettingStarted</title>
+    <title>Getting started with Ember.js on Heroku</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
-
+    <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/ember-js-getting-started.css">
 
@@ -19,6 +19,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-js-getting-started.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     {{content-for "body-footer"}}
   </body>
