--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
     <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/ember-js-getting-started.css">
+    <link rel="stylesheet" href="assets/purple-nurple.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,9 +18,8 @@
     {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
-    <script src="assets/ember-js-getting-started.js"></script>
+    <script src="assets/purple-nurple.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
 
     {{content-for "body-footer"}}
   </body>
