Restyle of compass; initialize electoral-map

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,11 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/purple-nurple.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"> </script>
+    <script src="//rawgithub.com/highslide-software/draggable-legend/master/draggable-legend.js"></script>
+		<script src="//code.highcharts.com/maps/modules/map.js"></script>
+		<script src="//code.highcharts.com/mapdata/countries/us/us-all-all.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     {{content-for "body-footer"}}
   </body>
