--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/purple-nurple.js"></script>
+    <script src="//code.highcharts.com/highcharts.js"></script>
     <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"> </script>
     <script src="//rawgithub.com/highslide-software/draggable-legend/master/draggable-legend.js"></script>
 		<script src="//code.highcharts.com/maps/modules/map.js"></script>
